# enterprise-rag-pipeline

./: .cursorrules  .env.template  .gitignore  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/agents/: add-langfuse-tracing.md  fix-docker-compose.md  run-ragas-eval.md  update-architecture-docs.md
.github/workflows/: ci.yml
api/: main.py  server.py
backends/: __init__.py  milvus_backend.py  pgvector_backend.py
configs/: backends.yaml  pipeline.yaml  rag.yaml
core/: __init__.py  exceptions.py  observability.py
deploy/: Dockerfile  docker-compose.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/k8s/: deployment.yaml
docs/: architecture.md  isv-customization.md
embeddings/: __init__.py  chunker.py  nim_embedder.py
evals/: __init__.py  langsmith_eval.py  ragas_eval.py  ragas_runner.py
evals/datasets/: sample_qa.py
evals/results/: baseline_ragas_results.json
ingestion/: __init__.py  pdf_loader.py  slack_loader.py  sql_loader.py  web_loader.py
orchestrator/: __init__.py  graph.py  pipeline.py  state.py
pipeline/: __init__.py  embedder.py  generator.py  indexer.py  retriever.py
retriever/: hybrid_retriever.py
tests/: conftest.py  test_api.py  test_chunker.py  test_embedder.py  test_factory.py  test_faiss_store.py  test_generator.py  test_graph.py  test_indexer.py  test_loaders.py  test_nodes.py  test_pdf_loader.py  test_pgvector_backend.py  test_pipeline.py  test_retriever.py  test_server.py  test_web_search.py
vectorstore/: __init__.py  base.py  factory.py  faiss_store.py  pgvector_store.py
(+11 files in other folders)
